k8s/http-routes/frontend-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: frontend-route
  namespace: sales-test-ns
spec:
  parentRefs:
    - name: sales-gateway
      namespace: sales-gateway-ns
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: sales-ui-service
          port: 8000
